JSW Devsb/src/objects/NSR_PD_Values__c.object
<CustomObject>
    <fields>
        <fullName>Code_Formula__c</fullName>
        <formula>District_Code__c +&apos;:&apos;+ Product__c+&apos;:&apos;+distribution_Channel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Code__c</fullName>
        <label>District Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District</label>
        <referenceTo>Districts__c</referenceTo>
        <relationshipLabel>NSR PD Values</relationshipLabel>
        <relationshipName>NSR_PD_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PD_Value__c</fullName>
        <label>PD Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>NSR PD Values</relationshipLabel>
        <relationshipName>NSR_PD_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Processed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>To Be Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>distribution_Channel__c</fullName>
        <label>distribution Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>NSR PD Values</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NSR PD Values Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NSR PD Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>